src/components/QuestDetailsWrapper/index.module.scss
.questDetails {
  flex-grow: 1;
  width: 100%;
  max-width: 576px;
  padding: var(--space-2lg);
}

.markdownDescription {
  white-space: normal;
}

.syncSuccess {
  display: flex;
  align-items: center;
  gap: var(--space-sm);
}

.loadingContainer {
  padding: var(--space-2lg);
  max-width: 700px;
  height: 100%;

  display: flex;
  justify-content: center;
  align-items: center;
}

.loadingSpinner {
  font-size: var(--text-3xl);
}

